--- a/css/style.css
+++ b/css/style.css
@@ -156,7 +156,7 @@ header{
 /*---NAVBAR---*/
 
 .navbar{
-    width:98%;
+    width:83%;
     margin:auto;
     display:flex;
     justify-content:space-between;
